--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "morgan": "^1.10.0",
+    "motion": "^12.18.1",
     "nodemon": "^3.1.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
